2024-Mar-25 Struan Robertson

		* MultiHinderedRotorPotential.cpp: Cross terms added.

2024-Mar-17 Struan Robertson

		* gDensityOfStates.cpp: Altered .xml output statement as to limit conversion
		to scientific format as this cannot be processed by XSLT.

2024-Mar-08 Struan Robertson

		* CollisionOperator.cpp: Effective radiation temperature, norm update.

		* NSISScriptToCreateInstaller.nsi: Windows installer altered to use 64 bit 
		MESMER build.

		* Mesmer.sln: Mesmer VS solution file.

2023-Dec-29 Struan Robertson

		*  MultiHinderedRotorPotential.cpp: Further updates to coupled hindered rotor
		potential.

2023-Dec-28 Struan Robertson

		*  MultiHinderedRotorPotential.h/.cpp, ClassicalCoupledRotors.cpp: Improved 
		control and reporting of coupled hindered rotor potential.

2023-Dec-28 Struan Robertson

		*  MultiHinderedRotorPotential.h/.cpp, ClassicalCoupledRotors.cpp: Update of
		classical coupled rotors class to invoke coupled hindered rotor potential.

2023-Dec-23 Struan Robertson

		*  MultiHinderedRotorPotential.h/.cpp: Extension of coupled hindered rotor 
		potential to include basis product terms.

2023-Dec-23 Struan Robertson

		*  MultiHinderedRotorPotential.h/.cpp, ClassicalCoupledRotors.cpp: Initial 
		implementation of coupled hindered rotor potential.

2023-Dec-18 Struan Robertson

		*  CollisionOperator.h/.cpp, System.cpp: Implementation of the effective 
		collision-radiation temperature method.

2023-Dec-18 Struan Robertson

		*  gWellProperties.h, gWellRadiationTransition.h, MesmerEnv.h/.cpp, TMatrix.h: Mods. 
		in preparation for the implementation of the effective collision-radiation temperature
		method.

2023-Dec-01 Struan Robertson

		* HinderedRotorUtils.h/.cpp: Initial outline of N-dimensional angular potential.

2023-Sep-24 Struan Robertson

		* GaussianDistFragmentation.cpp: Revised functional form.

2023-Sep-09 Struan Robertson

		* MesmerILT.cpp: Further changes in for secondary activation energy parsing.
